// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoBanner /> render component with breadcrumbs 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Breadcrumbs
        className="mfui-video-banner__breadcrumbs"
        classes={
          Object {
            "item": "breadcrumbs-item-custom-class-name",
          }
        }
        dataAttrs={
          Object {
            "link": undefined,
            "root": undefined,
          }
        }
        items={
          Array [
            Object {
              "href": "#",
              "title": "МегаФон",
            },
            Object {
              "href": "#",
              "title": "Мобильная связь",
            },
            Object {
              "href": "#",
              "title": "Тарифы",
            },
          ]
        }
      />
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
                theme="green"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with classes 1`] = `
<div
  className="mfui-video-banner className rootClass"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button buttonClass"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
                theme="green"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link linkClass"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet=""
        />
        <source
          media="(min-width: 1024px)"
          srcSet=""
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with dataAttrs 1`] = `
<div
  className="mfui-video-banner"
  data-testid="root-test"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet=""
        />
        <source
          media="(min-width: 1024px)"
          srcSet=""
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with non default buttonColor 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
                theme="purple"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with pictures 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with pictures and content 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
                theme="green"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with pictures and download links content 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                download={true}
                href="#"
                target="_blank"
                theme="green"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                download={true}
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with pictures and non default content text color 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_white"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
                theme="green"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component with the different content text color on desktop and mobile resolution 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black mfui-video-banner__content_text-color-mobile_white"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <Button
                className="mfui-video-banner__button"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
                theme="green"
              >
                Текст в кнопке
              </Button>
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> render component without button 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <Grid
        className="mfui-video-banner__grid"
        guttersLeft="medium"
      >
        <GridColumn
          desktop="7"
          mobile="12"
          tablet="7"
          wide="6"
        >
          <div
            className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
          >
            <Header
              as="h1"
              className="mfui-video-banner__title"
              color="inherit"
            >
              Текст ≈40 симовлов. Короткие слова
            </Header>
            <div
              className="mfui-video-banner__text"
            >
              <Header
                as="h5"
                className="mfui-video-banner__description"
                color="inherit"
              >
                Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
              </Header>
              <div
                className="mfui-video-banner__cost"
              >
                oт 
                <component
                  key="1"
                >
                  1000 ₽
                </component>
                 за сообщение
              </div>
            </div>
            <div
              className="mfui-video-banner__btns-wrapper"
            >
              <TextLink
                className="mfui-video-banner__link"
                dataAttrs={
                  Object {
                    "root": undefined,
                  }
                }
                href="#"
                target="_blank"
              >
                Личный кабинет услуги
              </TextLink>
            </div>
          </div>
        </GridColumn>
      </Grid>
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet="imageDesktopWide"
        />
        <source
          media="(min-width: 1024px)"
          srcSet="imageDesktop"
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageTablet"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;

exports[`<VideoBanner /> tests with local window render component with classes for video 1`] = `
<VideoBanner
  classes={
    Object {
      "video": "videoClass",
    }
  }
  content={
    Object {
      "buttonHref": "#",
      "buttonTarget": "_blank",
      "buttonTitle": "Текст в кнопке",
      "cost": "oт <b>1000 ₽</b> за сообщение",
      "description": "Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.",
      "linkTarget": "_blank",
      "linkTitle": "Личный кабинет услуги",
      "linkUrl": "#",
      "title": "Текст ≈40 симовлов. Короткие слова",
    }
  }
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  videoSrc="video.mp4"
  videoType="video"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <Grid
              className="mfui-video-banner__grid"
              guttersLeft="medium"
            >
              <div
                className="mfui-grid mfui-video-banner__grid"
              >
                <div
                  className="mfui-grid__container mfui-grid__container_multi-row mfui-grid__container_gutters-left_medium"
                >
                  <GridColumn
                    className="mfui-grid__column mfui-grid__column_gutter-left_medium"
                    desktop="7"
                    key=".0"
                    mobile="12"
                    tablet="7"
                    wide="6"
                  >
                    <div
                      className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_6 mfui-grid-column_desktop_7 mfui-grid-column_tablet_7 mfui-grid-column_mobile_12 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium"
                    >
                      <div
                        className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
                      >
                        <Header
                          as="h1"
                          className="mfui-video-banner__title"
                          color="inherit"
                        >
                          <h1
                            className="mfui-header mfui-header_color_inherit mfui-header_level_h1 mfui-header_h-align_inherit mfui-video-banner__title"
                          >
                            Текст ≈40 симовлов. Короткие слова
                          </h1>
                        </Header>
                        <div
                          className="mfui-video-banner__text"
                        >
                          <Header
                            as="h5"
                            className="mfui-video-banner__description"
                            color="inherit"
                          >
                            <h5
                              className="mfui-header mfui-header_color_inherit mfui-header_level_h5 mfui-header_h-align_inherit mfui-video-banner__description"
                            >
                              Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
                            </h5>
                          </Header>
                          <div
                            className="mfui-video-banner__cost"
                          >
                            oт 
                            <component
                              key="1"
                            >
                              <Header
                                as="h3"
                                className="mfui-video-banner__value"
                                color="inherit"
                              >
                                <h3
                                  className="mfui-header mfui-header_color_inherit mfui-header_level_h3 mfui-header_h-align_inherit mfui-video-banner__value"
                                >
                                  1000 ₽
                                </h3>
                              </Header>
                            </component>
                             за сообщение
                          </div>
                        </div>
                        <div
                          className="mfui-video-banner__btns-wrapper"
                        >
                          <Button
                            className="mfui-video-banner__button"
                            dataAttrs={
                              Object {
                                "root": undefined,
                              }
                            }
                            href="#"
                            target="_blank"
                            theme="green"
                          >
                            <a
                              className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text mfui-video-banner__button"
                              disabled={false}
                              href="#"
                              onClick={[Function]}
                              rel="noreferrer noopener"
                              target="_blank"
                            >
                              <div
                                className="mfui-button__inner"
                              >
                                <div
                                  className="mfui-button__content"
                                >
                                  <span
                                    className="mfui-button__text"
                                  >
                                    Текст в кнопке
                                  </span>
                                </div>
                              </div>
                            </a>
                          </Button>
                          <TextLink
                            className="mfui-video-banner__link"
                            dataAttrs={
                              Object {
                                "root": undefined,
                              }
                            }
                            href="#"
                            target="_blank"
                          >
                            <Link
                              className="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_blue mfui-video-banner__link"
                              dataAttrs={
                                Object {
                                  "root": undefined,
                                }
                              }
                              href="#"
                              target="_blank"
                            >
                              <a
                                className="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_blue mfui-video-banner__link"
                                href="#"
                                target="_blank"
                              >
                                Личный кабинет услуги
                              </a>
                            </Link>
                          </TextLink>
                        </div>
                      </div>
                    </div>
                  </GridColumn>
                </div>
              </div>
            </Grid>
            <video
              autoPlay={true}
              className="mfui-video-banner__video videoClass"
              loop={true}
              muted={true}
            >
              <source
                src="video.mp4"
                type="video/mp4"
              />
            </video>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render desktop image on relevant resolution 1`] = `
<VideoBanner
  imageDesktop="imageDesktop"
  imageDesktopWide="imageDesktopWide"
  imageMobile="imageMobile"
  imageTablet="imageTablet"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <picture>
              <source
                media="(min-width: 1280px)"
                srcSet="imageDesktopWide"
              />
              <source
                media="(min-width: 1024px)"
                srcSet="imageDesktop"
              />
              <source
                media="(min-width: 768px)"
                srcSet="imageTablet"
              />
              <img
                alt=""
                className="mfui-video-banner__background-image"
                src="imageMobile"
              />
            </picture>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render mobile image on relevant resolution 1`] = `
<VideoBanner
  imageDesktop="imageDesktop"
  imageDesktopWide="imageDesktopWide"
  imageMobile="imageMobile"
  imageTablet="imageTablet"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <picture>
              <source
                media="(min-width: 1280px)"
                srcSet="imageDesktopWide"
              />
              <source
                media="(min-width: 1024px)"
                srcSet="imageDesktop"
              />
              <source
                media="(min-width: 768px)"
                srcSet="imageTablet"
              />
              <img
                alt=""
                className="mfui-video-banner__background-image"
                src="imageMobile"
              />
            </picture>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render tablet image on relevant resolution 1`] = `
<VideoBanner
  imageDesktop="imageDesktop"
  imageDesktopWide="imageDesktopWide"
  imageMobile="imageMobile"
  imageTablet="imageTablet"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <picture>
              <source
                media="(min-width: 1280px)"
                srcSet="imageDesktopWide"
              />
              <source
                media="(min-width: 1024px)"
                srcSet="imageDesktop"
              />
              <source
                media="(min-width: 768px)"
                srcSet="imageTablet"
              />
              <img
                alt=""
                className="mfui-video-banner__background-image"
                src="imageMobile"
              />
            </picture>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render video with sounds enabled 1`] = `
<VideoBanner
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  isMuted={false}
  videoSrc="video.mp4"
  videoType="video"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <video
              autoPlay={true}
              className="mfui-video-banner__video"
              loop={true}
              muted={false}
            >
              <source
                src="video.mp4"
                type="video/mp4"
              />
            </video>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render wide desktop image on relevant resolution 1`] = `
<VideoBanner
  imageDesktop="imageDesktop"
  imageDesktopWide="imageDesktopWide"
  imageMobile="imageMobile"
  imageTablet="imageTablet"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <picture>
              <source
                media="(min-width: 1280px)"
                srcSet="imageDesktopWide"
              />
              <source
                media="(min-width: 1024px)"
                srcSet="imageDesktop"
              />
              <source
                media="(min-width: 768px)"
                srcSet="imageTablet"
              />
              <img
                alt=""
                className="mfui-video-banner__background-image"
                src="imageMobile"
              />
            </picture>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render with video 1`] = `
<VideoBanner
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  videoSrc="video.mp4"
  videoType="video"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <video
              autoPlay={true}
              className="mfui-video-banner__video"
              loop={true}
              muted={true}
            >
              <source
                src="video.mp4"
                type="video/mp4"
              />
            </video>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render with video and content 1`] = `
<VideoBanner
  content={
    Object {
      "buttonHref": "#",
      "buttonTarget": "_blank",
      "buttonTitle": "Текст в кнопке",
      "cost": "oт <b>1000 ₽</b> за сообщение",
      "description": "Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.",
      "linkTarget": "_blank",
      "linkTitle": "Личный кабинет услуги",
      "linkUrl": "#",
      "title": "Текст ≈40 симовлов. Короткие слова",
    }
  }
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  videoSrc="video.mp4"
  videoType="video"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <Grid
              className="mfui-video-banner__grid"
              guttersLeft="medium"
            >
              <div
                className="mfui-grid mfui-video-banner__grid"
              >
                <div
                  className="mfui-grid__container mfui-grid__container_multi-row mfui-grid__container_gutters-left_medium"
                >
                  <GridColumn
                    className="mfui-grid__column mfui-grid__column_gutter-left_medium"
                    desktop="7"
                    key=".0"
                    mobile="12"
                    tablet="7"
                    wide="6"
                  >
                    <div
                      className="mfui-grid-column mfui-grid-column_all_12 mfui-grid-column_wide_6 mfui-grid-column_desktop_7 mfui-grid-column_tablet_7 mfui-grid-column_mobile_12 mfui-grid-column_all-order_0 mfui-grid-column_wide-order_0 mfui-grid-column_desktop-order_0 mfui-grid-column_tablet-order_0 mfui-grid-column_mobile-order_0 mfui-grid__column mfui-grid__column_gutter-left_medium"
                    >
                      <div
                        className="mfui-video-banner__content mfui-video-banner__content_text-color_black"
                      >
                        <Header
                          as="h1"
                          className="mfui-video-banner__title"
                          color="inherit"
                        >
                          <h1
                            className="mfui-header mfui-header_color_inherit mfui-header_level_h1 mfui-header_h-align_inherit mfui-video-banner__title"
                          >
                            Текст ≈40 симовлов. Короткие слова
                          </h1>
                        </Header>
                        <div
                          className="mfui-video-banner__text"
                        >
                          <Header
                            as="h5"
                            className="mfui-video-banner__description"
                            color="inherit"
                          >
                            <h5
                              className="mfui-header mfui-header_color_inherit mfui-header_level_h5 mfui-header_h-align_inherit mfui-video-banner__description"
                            >
                              Описание должно быть примерно не более 130 символов. Пишите содержательно, кратно и не будет проблем с текстовым контентом.
                            </h5>
                          </Header>
                          <div
                            className="mfui-video-banner__cost"
                          >
                            oт 
                            <component
                              key="1"
                            >
                              <Header
                                as="h3"
                                className="mfui-video-banner__value"
                                color="inherit"
                              >
                                <h3
                                  className="mfui-header mfui-header_color_inherit mfui-header_level_h3 mfui-header_h-align_inherit mfui-video-banner__value"
                                >
                                  1000 ₽
                                </h3>
                              </Header>
                            </component>
                             за сообщение
                          </div>
                        </div>
                        <div
                          className="mfui-video-banner__btns-wrapper"
                        >
                          <Button
                            className="mfui-video-banner__button"
                            dataAttrs={
                              Object {
                                "root": undefined,
                              }
                            }
                            href="#"
                            target="_blank"
                            theme="green"
                          >
                            <a
                              className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch mfui-button_content-type_text mfui-video-banner__button"
                              disabled={false}
                              href="#"
                              onClick={[Function]}
                              rel="noreferrer noopener"
                              target="_blank"
                            >
                              <div
                                className="mfui-button__inner"
                              >
                                <div
                                  className="mfui-button__content"
                                >
                                  <span
                                    className="mfui-button__text"
                                  >
                                    Текст в кнопке
                                  </span>
                                </div>
                              </div>
                            </a>
                          </Button>
                          <TextLink
                            className="mfui-video-banner__link"
                            dataAttrs={
                              Object {
                                "root": undefined,
                              }
                            }
                            href="#"
                            target="_blank"
                          >
                            <Link
                              className="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_blue mfui-video-banner__link"
                              dataAttrs={
                                Object {
                                  "root": undefined,
                                }
                              }
                              href="#"
                              target="_blank"
                            >
                              <a
                                className="mfui-text-link mfui-text-link_underline-visibility_hover mfui-text-link_underline-style_solid mfui-text-link_color_blue mfui-video-banner__link"
                                href="#"
                                target="_blank"
                              >
                                Личный кабинет услуги
                              </a>
                            </Link>
                          </TextLink>
                        </div>
                      </div>
                    </div>
                  </GridColumn>
                </div>
              </div>
            </Grid>
            <video
              autoPlay={true}
              className="mfui-video-banner__video"
              loop={true}
              muted={true}
            >
              <source
                src="video.mp4"
                type="video/mp4"
              />
            </video>
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render with youtube video 1`] = `
<VideoBanner
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  videoSrc="2Sps5MnvlKM"
  videoType="youtube"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <iframe
              allow="autoplay"
              className="mfui-video-banner__video"
              frameBorder="0"
              height="100%"
              src="https://www.youtube.com/embed/2Sps5MnvlKM?&autoplay=1&mute=1&loop=1&rel=0&controls=0&showinfo=0e&iv_load_policy=3&playlist=2Sps5MnvlKM"
              title="iframe"
              width="100%"
            />
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window render youtube video with sounds enabled 1`] = `
<VideoBanner
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  isMuted={false}
  videoSrc="2Sps5MnvlKM"
  videoType="youtube"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <iframe
              allow="autoplay"
              className="mfui-video-banner__video"
              frameBorder="0"
              height="100%"
              src="https://www.youtube.com/embed/2Sps5MnvlKM?&autoplay=1&mute=0&loop=1&rel=0&controls=0&showinfo=0e&iv_load_policy=3&playlist=2Sps5MnvlKM"
              title="iframe"
              width="100%"
            />
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window should not render background image on desktop resolution with video 1`] = `
<VideoBanner
  imageMobile="imageMobile"
  imageTablet="imageTablet"
  videoSrc="2Sps5MnvlKM"
  videoType="youtube"
>
  <div
    className="mfui-video-banner"
  >
    <ContentArea>
      <div
        className="mfui-content-area mfui-content-area_background-color_transparent"
      >
        <div
          className="mfui-content-area__inner mfui-content-area__inner_background-color_transparent"
        >
          <div
            className="mfui-video-banner__wrapper"
          >
            <iframe
              allow="autoplay"
              className="mfui-video-banner__video"
              frameBorder="0"
              height="100%"
              src="https://www.youtube.com/embed/2Sps5MnvlKM?&autoplay=1&mute=1&loop=1&rel=0&controls=0&showinfo=0e&iv_load_policy=3&playlist=2Sps5MnvlKM"
              title="iframe"
              width="100%"
            />
          </div>
        </div>
      </div>
    </ContentArea>
  </div>
</VideoBanner>
`;

exports[`<VideoBanner /> tests with local window should not render video on mobile resolution by default 1`] = `
<div
  className="mfui-video-banner"
>
  <ContentArea>
    <div
      className="mfui-video-banner__wrapper"
    >
      <picture>
        <source
          media="(min-width: 1280px)"
          srcSet=""
        />
        <source
          media="(min-width: 1024px)"
          srcSet=""
        />
        <source
          media="(min-width: 768px)"
          srcSet="imageDesktop"
        />
        <img
          alt=""
          className="mfui-video-banner__background-image"
          src="imageMobile"
        />
      </picture>
    </div>
  </ContentArea>
</div>
`;
